Further feature additions with functionallity and logic, however errors are present with SkillTreeManager and AvatarScoresGUI. Index.html made by claude (basic interface).